# Insurance_AI_POC

./: .gitignore  ARCHITECTURE_FLOW.md  README.md  pyproject.toml  test_results.txt
.github/: copilot-instructions.md
chunked_earnings_calls/: earnings_chunks_20251114_203113.json
downloaded_earnings_calls/: AIG_EARNINGS_2023_Q1_2023-03-01.txt  AIG_EARNINGS_2023_Q2_2023-06-01.txt  AIG_EARNINGS_2023_Q3_2023-09-01.txt  AIG_EARNINGS_2023_Q4_2023-12-01.txt  AIG_EARNINGS_2024_Q1_2024-03-01.txt  AIG_EARNINGS_2024_Q2_2024-06-01.txt  AIG_EARNINGS_2024_Q3_2024-09-01.txt  AIG_EARNINGS_2024_Q4_2024-12-01.txt  AIG_EARNINGS_2025_Q1_2025-03-01.txt  AIG_EARNINGS_2025_Q2_2025-06-01.txt  AIG_EARNINGS_2025_Q3_2025-09-01.txt  CB_EARNINGS_2023_Q1_2023-03-01.txt  CB_EARNINGS_2023_Q2_2023-06-01.txt  CB_EARNINGS_2023_Q3_2023-09-01.txt  CB_EARNINGS_2023_Q4_2023-12-01.txt  CB_EARNINGS_2024_Q1_2024-03-01.txt  CB_EARNINGS_2024_Q2_2024-06-01.txt  CB_EARNINGS_2024_Q3_2024-09-01.txt  CB_EARNINGS_2024_Q4_2024-12-01.txt  CB_EARNINGS_2025_Q1_2025-03-01.txt  CB_EARNINGS_2025_Q2_2025-06-01.txt  CB_EARNINGS_2025_Q3_2025-09-01.txt  CNA_EARNINGS_2023_Q1_2023-03-01.txt  CNA_EARNINGS_2023_Q2_2023-06-01.txt  CNA_EARNINGS_2023_Q3_2023-09-01.txt  CNA_EARNINGS_2023_Q4_2023-12-01.txt  CNA_EARNINGS_2024_Q1_2024-03-01.txt  CNA_EARNINGS_2024_Q2_2024-06-01.txt  CNA_EARNINGS_2024_Q3_2024-09-01.txt  CNA_EARNINGS_2024_Q4_2024-12-01.txt  CNA_EARNINGS_2025_Q1_2025-03-01.txt  CNA_EARNINGS_2025_Q2_2025-06-01.txt  CNA_EARNINGS_2025_Q3_2025-09-01.txt  HIG_EARNINGS_2023_Q1_2023-03-01.txt  HIG_EARNINGS_2023_Q2_2023-06-01.txt  HIG_EARNINGS_2023_Q3_2023-09-01.txt  HIG_EARNINGS_2023_Q4_2023-12-01.txt  HIG_EARNINGS_2024_Q1_2024-03-01.txt  HIG_EARNINGS_2024_Q2_2024-06-01.txt  HIG_EARNINGS_2024_Q3_2024-09-01.txt  (+26 more)
src/ai_poc/terraform/: .terraform.lock.hcl  main.tf  varaibles.tf
src/ai_poc/workflow_1/agents/: __init__.py  config.py  financial_metrics_agent.py  risk_outlook_agent.py  root_agent.py  strategic_initiatives_agent.py  tools.py  utility_agent.py
src/ai_poc/workflow_1/arize_tracing/: arize_config.py
src/ai_poc/workflow_1/scripts/: earnings_call_ingestion.py  financial_report_ingestion.py  regenerate_report.py  test_search.py  upload_raw_files.py
src/ai_poc/workflow_2/agents/: __init__.py  competitive_positioning_agent.py  config.py  financial_metrics_agent.py  risk_outlook_agent.py  root_agent.py  strategic_initiatives_agent.py
src/insurance_ai_poc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: README_TESTING.md  competitive_intelligence_basic.test.json  competitive_intelligence_full_report.evalset.json  conftest.py  pytest.ini  test_adk_integration.py  test_config.json
(+3 files in other folders)
